# Oxide

./: .gitignore  README.md  bun.lockb  package.json  turbo.json
.cursor/rules/: api-testing-standards.mdc  component-development.mdc  design-system.mdc  dev-server-management.mdc  developer-upload-system.mdc  google-seo-requirements.mdc  launchbeacon-api-development.mdc  mock-data-api-system.mdc  oxide-architecture.mdc  oxide-contributing.mdc  oxide-design.mdc  oxide-vision.mdc  speed-optimization.mdc
apps/desktop/: globals.css  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
apps/desktop/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  trace  transform.js
apps/desktop/app/: desktop.css  globals.css  layout.tsx  page.tsx
apps/desktop/components/: DesktopLayout.tsx  ErrorBoundary.tsx  FriendsWidget.tsx  GameCard.tsx  GameDetails.tsx  LibrarySidebar.tsx  PerformanceDashboard.tsx  Settings.tsx  cloud-saves.tsx  game-detail-page.tsx  game-library.tsx  profile.tsx  store.tsx  tauri-greet.tsx
apps/desktop/data/: achievements.json  groups.json  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: game_downloader.rs  lib.rs  main.rs  mod_engine.rs  search_index.rs  sync.rs
apps/desktop/src-tauri/src/commands/: games.rs
apps/web/: next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
components/store/: PaginatedGameGrid.tsx
scripts/: generate-mock-data.js  generate-mock-data.ts
(+216 files in other folders)
