[package]
name = "launchbeacon-desktop"
version = "0.1.0"
description = "LaunchBeacon Desktop App - Lightning fast game launcher"
authors = ["LaunchBeacon Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tantivy = "0.22"
zip = "2.1"
dirs = "5.0"
thiserror = "2.0"
anyhow = "1.0"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies for window management
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
